# fastapi-14days

./: .gitignore  README.md  main.py  models.py  pyproject.toml
api/: deps.py
api/routes/: auth.py  todos.py
core/: config.py  db.py  security.py
tests/: conftest.py  test_dependencies.py  test_error_middleware.py  test_jwt_auth.py  test_main.py  test_path_params.py  test_request_body.py  test_response_model.py
